1. Added new sample posts 2. Updated title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@ ga('send', 'pageview');
     ================================================== -->
    
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+        <h1><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}"> Sciencia</h1   >
     </a>  
    
 
